--- a/.jshintrc
+++ b/.jshintrc
@@ -2,7 +2,7 @@
   "browser": true,
   "esnext": true,
   "bitwise": false,
-  "camelcase": true,
+  "camelcase": false,
   "curly": true,
   "eqeqeq": true,
   "immed": true,
